--- a/style.css
+++ b/style.css
@@ -1,34 +1,69 @@
-body{
+h1{
+  font-family: "willow-std", serif; width: 150;
+    text-align: left;
+    font-size: 12.0vw;
+    margin-top: 3vw;
+    margin-left: 15px;
+    line-height: 0.8;
+    color: rgba(87, 108, 35, 1);
+}
+.intro{
+  font-family:"sztos-variable",sans-serif;
+    font-variation-settings: 'wght' 200, 'wdth' 200;
+    text-decoration: none;
+    display: grid;
+    margin-top: 100px;
+    margin-bottom: 10px;
+    font-size: 17px;
+    font-weight: 450;
+    color:  rgba(87, 108, 35, 1);
+}
+.start {
+  text-align: left;
+  padding: 12px;
+  margin-bottom: 30px;
+  margin-left: 100px;
+  text-decoration: none;
+}
+.projets {
+  text-align: left;
+  padding: 20px;
+  font-family: "sztos-variable",sans-serif;
+  margin: 10px;
+  color: rgba(87, 108, 35, 1);
+  font-weight: 450;
+  text-wrap: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 60px;
+  text-decoration: none;
+}
+.domaine{
+  text-align: left;
+  padding: 20px;
+  font-family: "sztos-variable",sans-serif;
+  margin: 10px;
+  color: rgba(87, 108, 35, 1);
+  font-weight: 450;
+  font-size: larger;
+  text-decoration: none;
+}
+.numero{
+  text-align: right;
+  padding: 20px;
+  margin: 10px;
+  color:  rgba(87, 108, 35, 1);
+  font-size: 60px; 
+  font-weight: 450;
   font-family: "willow-std", serif;
-  font-weight: 400;
-  font-size: 20px;
-  font-style: normal;;
-    color: rgb(255, 255, 255);        
+  text-decoration: none;
 }
 img{
     max-width: 100%;
     height: auto;
 }
-.header{
-    background-color: rgba(87, 108, 35, 1);
-    display: grid;
-    grid-template-columns: max-content max-content;
-    justify-content: space-between;
-    align-items: baseline;
-    margin-bottom: 20px;
-    padding: 20px;
-    border-radius: 5px;
-}
 .lien{
   text-decoration: none;
-}
-.header-title{
-    background-color:  rgba(87, 108, 35, 1);
-    margin: 8;
-    border-radius: 5px;
-}
-.header-nav{
-    background-color: rgba(102, 173, 245, 1);
 }
 .index .grid{
     display: grid;
@@ -37,10 +72,6 @@ img{
     grid-template-columns: repeat(auto-fit, minmax (320px, 1fr));
     justify-content:center;
     gap: 20px;
-}
-.projet-large{
-    background-color: rgba(102, 173, 245, 1);
-    grid-column: span 2;
 }
 .item{
     display:grid;
@@ -53,7 +84,7 @@ img{
     grid-row: 2;
     justify-self:center;
     align-self:center;
-    color:rgba(246, 240, 223, 1);
+    color: rgba(87, 108, 35, 1);
     transition: 0.5s;
   }
   .item p{
@@ -66,7 +97,44 @@ img{
   .item:hover p{
     opacity:1;
   }
-  .main.grid{
-    grid-template-columns: 20% 20% 20% 20% 20%;
-  grid-template-rows: 20% 20% 20% 20% 20%;
-  }
+  .div{
+    display: block;
+    unicode-bidi: isolate;
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 220px 100px;
+  margin: 10px;
+  font-family: "elza", sans-serif;
+  text-align: left;
+  border-bottom: 0.5px solid  rgba(87, 108, 35, 1);
+  text-decoration: none;
+  color:  rgba(87, 108, 35, 1);
+  margin: 0 15px;
+  font-size: 15px;
+  transition: 0.4s;
+  align-items: center;
+}
+a {
+  text-decoration: none;
+  color:rgba(87, 108, 35, 1);
+}
+a:-webkit-any-link {
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: none;
+}
+.label{
+  display: grid;
+  grid-template-columns: 1fr 220px 100px;
+  margin: 10px;
+  font-family: "sztos-variable",sans-serif;
+  text-align: left;
+  border-bottom: 0.5px solid rgba(87, 108, 35, 1);
+  text-decoration: none;
+  color: rgba(87, 108, 35, 1);
+  margin: 15px;
+  font-size: 30px;
+  transition: 0.4s;
+  align-items: center;
+}
