--- a/style.css
+++ b/style.css
@@ -1,23 +1,32 @@
+@font-face{
+  font-family:"PicNic" ;
+  src: url(webfonts/PicNic.woff2)format("woff2"),
+    url(webfonts/PicNic.woff)format("woff");
+}
+body{
+cursor: url('images/etoileicon-8.png');
+}
 h1{
-  font-family: "willow-std", serif; width: 150;
-    text-align: left;
+  font-family: "PicNic";
+    text-align: center;
     font-size: 12.0vw;
     margin-top: 3vw;
-    margin-left: 15px;
+    margin-left: 1px;
     line-height: 0.8;
-    color: rgba(87, 108, 35, 1);
+    color: rgb(0, 0, 0);
 }
 .intro{
   font-family:"sztos-variable",sans-serif;
     font-variation-settings: 'wght' 200, 'wdth' 200;
     text-decoration: none;
     display: grid;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 10px;
     font-size: 17px;
     font-weight: 450;
-    color:  rgba(87, 108, 35, 1);
+    color:  rgb(0, 0, 0);
 }
+
 .start {
   text-align: left;
   padding: 12px;
@@ -30,7 +39,7 @@ h1{
   padding: 20px;
   font-family: "sztos-variable",sans-serif;
   margin: 10px;
-  color: rgba(87, 108, 35, 1);
+  color: rgb(0, 0, 0);
   font-weight: 450;
   text-wrap: nowrap;
   overflow: hidden;
@@ -43,7 +52,7 @@ h1{
   padding: 20px;
   font-family: "sztos-variable",sans-serif;
   margin: 10px;
-  color: rgba(87, 108, 35, 1);
+  color: rgb(0, 0, 0);
   font-weight: 450;
   font-size: larger;
   text-decoration: none;
@@ -52,10 +61,10 @@ h1{
   text-align: right;
   padding: 20px;
   margin: 10px;
-  color:  rgba(87, 108, 35, 1);
+  color:  rgb(0, 0, 0);
   font-size: 60px; 
   font-weight: 450;
-  font-family: "willow-std", serif;
+  font-family: "PicNic";
   text-decoration: none;
 }
 img{
@@ -69,34 +78,10 @@ img{
     display: grid;
     max-width: 1280px;
     margin: 0 auto;
-    grid-template-columns: repeat(auto-fit, minmax (320px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     justify-content:center;
     gap: 20px;
 }
-.item{
-    display:grid;
-    width: 490px; 
-    background: rgba(87, 108, 35, 1);
-    text-decoration: none;
-   }
-  .item>*{
-    grid-column: 2;
-    grid-row: 2;
-    justify-self:center;
-    align-self:center;
-    color: rgba(87, 108, 35, 1);
-    transition: 0.5s;
-  }
-  .item p{
-    font-size: 32px;
-    opacity:0;
-  }
-  .item:hover img{
-    opacity:0;
-  }
-  .item:hover p{
-    opacity:1;
-  }
   .div{
     display: block;
     unicode-bidi: isolate;
@@ -105,24 +90,24 @@ img{
   display: grid;
   grid-template-columns: 1fr 220px 100px;
   margin: 10px;
-  font-family: "elza", sans-serif;
+  font-family:"sztos-variable",sans-serif;
   text-align: left;
-  border-bottom: 0.5px solid  rgba(87, 108, 35, 1);
+  border-bottom: 0.5px solid  rgb(0, 0, 0);
   text-decoration: none;
-  color:  rgba(87, 108, 35, 1);
+  color:  rgb(0, 0, 0);
   margin: 0 15px;
   font-size: 15px;
   transition: 0.4s;
   align-items: center;
+  position: sticky;
+  top: 0;
+  background-color: white; 
+  z-index: 100;
+  padding: 10px 0; 
 }
 a {
   text-decoration: none;
-  color:rgba(87, 108, 35, 1);
-}
-a:-webkit-any-link {
-  color: -webkit-link;
-  cursor: pointer;
-  text-decoration: none;
+  color:rgb(0, 0, 0);
 }
 .label{
   display: grid;
@@ -130,11 +115,47 @@ a:-webkit-any-link {
   margin: 10px;
   font-family: "sztos-variable",sans-serif;
   text-align: left;
-  border-bottom: 0.5px solid rgba(87, 108, 35, 1);
+  border-bottom: 0.5px solid rgb(0, 0, 0);
   text-decoration: none;
-  color: rgba(87, 108, 35, 1);
+  color: rgb(0, 0, 0);
   margin: 15px;
   font-size: 30px;
   transition: 0.4s;
   align-items: center;
+  position: sticky;
+  top: 0;
+  background-color: white; 
+  z-index: 100;
+  padding: 10px 0; 
+}
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 100px;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.grid .hover-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.3s;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.grid:hover .hover-image {
+  opacity: 0.3; 
+}
+
+.grid span {
+  position: relative;
+  z-index: 1;
 }
