--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ cursor: url('images/etoileicon-8.png');
 }
 h1{
   font-family: "PicNic";
-    text-align: center;
-    font-size: 12.0vw;
+    text-align: left;
+    font-size: medium;
     margin-top: 3vw;
     margin-left: 1px;
     line-height: 0.8;
@@ -22,7 +22,7 @@ h1{
     display: grid;
     margin-top: 50px;
     margin-bottom: 10px;
-    font-size: 17px;
+    font-size: 10px;
     font-weight: 450;
     color:  rgb(0, 0, 0);
 }
@@ -34,39 +34,60 @@ h1{
   margin-left: 100px;
   text-decoration: none;
 }
+label.label>*{
+  font-weight: 280;
+  font-size: 20px;
+
+}
+
+
+.projets,.domaine,.numero{
+  font-size: 16px;
+  font-size: clamp(16px,4vw,25px);
+}
+
 .projets {
   text-align: left;
   padding: 20px;
-  font-family: "sztos-variable",sans-serif;
+  font-family:"sztos-variable",sans-serif;
   margin: 10px;
   color: rgb(0, 0, 0);
+
   font-weight: 450;
-  text-wrap: nowrap;
+  text-wrap:nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 60px;
-  text-decoration: none;
 }
 .domaine{
   text-align: left;
   padding: 20px;
-  font-family: "sztos-variable",sans-serif;
+  font-family:"sztos-variable",sans-serif;
   margin: 10px;
   color: rgb(0, 0, 0);
-  font-weight: 450;
-  font-size: larger;
-  text-decoration: none;
+  font-weight:450;
 }
-.numero{
-  text-align: right;
-  padding: 20px;
-  margin: 10px;
-  color:  rgb(0, 0, 0);
-  font-size: 60px; 
-  font-weight: 450;
-  font-family: "PicNic";
-  text-decoration: none;
-}
+
+
+.numero {
+      text-align: right;
+      padding: 20px;
+      margin: 10px;
+      color: rgb(0, 0, 0);
+      font-weight: 450;
+      font-family: "PicNic"
+  }
+  .rotating-image {
+    animation: rotate 3s linear infinite;
+    transform-origin: center;
+  }
+  
+  @keyframes rotate{
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    } }
 img{
     max-width: 100%;
     height: auto;
@@ -99,11 +120,6 @@ img{
   font-size: 15px;
   transition: 0.4s;
   align-items: center;
-  position: sticky;
-  top: 0;
-  background-color: white; 
-  z-index: 100;
-  padding: 10px 0; 
 }
 a {
   text-decoration: none;
@@ -122,11 +138,6 @@ a {
   font-size: 30px;
   transition: 0.4s;
   align-items: center;
-  position: sticky;
-  top: 0;
-  background-color: white; 
-  z-index: 100;
-  padding: 10px 0; 
 }
 .grid {
   display: grid;
@@ -152,10 +163,179 @@ a {
 }
 
 .grid:hover .hover-image {
-  opacity: 0.3; 
+  opacity: 0.5; 
 }
 
 .grid span {
   position: relative;
   z-index: 1;
+}
+h1 {
+  font-size: 20vw;
+}
+
+.intro {
+  font-size: 13px;
+}
+
+.projets {
+  font-size: 25px;
+  padding: 8px;
+}
+
+.grid {
+  grid-template-columns: 1fr 100px 50px;
+  font-size: 12px;
+  margin: 0 5px;
+}
+
+.label {
+  grid-template-columns: 1fr 100px 50px;
+  font-size: 18px;
+  margin: 0px;
+}
+
+@media screen and (min-width: 480px) {
+  h1 {
+    font-size: 18vw;
+    margin-top: 8vw;
+  }
+
+  .intro {
+    font-size: 14px;
+  }
+
+  .projets {
+    font-size: 30px;
+    padding: 10px;
+    text-wrap: wrap;
+  }
+
+  .domaine {
+    font-size: medium;
+    padding: 10px;
+  }
+
+  .numero {
+    font-size: 40px;
+    padding: 10px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr 120px 60px;
+    font-size: 13px;
+    margin: 0 10px;
+  }
+
+  .label {
+    grid-template-columns: 1fr 120px 60px;
+    font-size: 20px;
+    margin: 10px;
+  }
+}
+
+/* Pour les écrans à partir de 768px */
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 15vw;
+    margin-top: 5vw;
+  }
+  
+  .intro {
+    margin-top: 30px;
+    font-size: 15px;
+  }
+
+  .start {
+    margin-left: 50px;
+    margin-bottom: 20px;
+  }
+
+  .projets {
+    font-size: 40px;
+    padding: 15px;
+  }
+
+  .numero {
+    font-size: 50px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr 180px 80px;
+    font-size: 14px;
+  }
+
+  .label {
+    grid-template-columns: 1fr 180px 80px;
+    font-size: 25px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  h1 {
+    font-size: 12.0vw;
+    margin-top: 3vw;
+  }
+
+  .intro {
+    margin-top: 50px;
+    font-size: 17px;
+  }
+
+  .start {
+    margin-left: 100px;
+  }
+
+  .projets {
+    font-size: 50px;
+    padding: 20px;
+  }
+
+  .numero {
+    font-size: 60px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr 220px 100px;
+    font-size: 15px;
+  }
+
+  .label {
+    grid-template-columns: 1fr 220px 100px;
+    font-size: 30px;
+  }
+}
+.rotating-image {
+  animation: rotate 4s linear infinite;
+  transform-origin: center;
+  width: 50px; height: 50px;
+}
+.footer {
+  text-decoration: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background: rgb(255, 255, 255);
+  padding: 4px;
+  text-align: center;
+  font-family: "sztos-variable",sans-serif;
+  font-size: 18px;
+  font-weight: 80;
+}
+img{
+  max-width: 100%;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+  
+
+
 }
